# hackNYUEducation

./: .env.example  .gitignore  CHANGES_SUMMARY.md  CHEATSHEET.md  HOW_TO_USE_YOUR_PDF.md  Makefile  PROJECT_SUMMARY.md  README.md  TESTING.md  docker-compose.yml  init_frontend.sh  quick-start.sh  setup.sh  start.sh  stop-all.sh  stop.sh  test_websocket.py
backend/: Dockerfile  environment.yml  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  logging_config.py  main.py
backend/app/api/: materials.py  ws.py
backend/app/graph/: __init__.py  builder.py  state.py
backend/app/graph/nodes/: __init__.py  memory.py  quiz.py  rag.py  router.py  socrates.py  tts_node.py
backend/app/services/: __init__.py  gemini_client.py  qdrant_client.py  stt_service.py  tts_service.py
backend/app/workers/: chunk_ingest.py
backend/tests/: README.md  test_api_keys.py
frontendOther/: .env.local.example  Dockerfile  README-AGORA.md  package.json  pnpm-lock.yaml
frontendOther/app/: globals.css  layout.tsx  page.tsx
frontendOther/components/: connection-status.tsx  loading-skeleton.tsx  orb-status.tsx  recorder-button.tsx  session-sidebar.tsx  toast-notification.tsx  transcript-panel.tsx  upload-panel.tsx  visual-action-handler.tsx  voice-indicator.tsx  whiteboard-pane.tsx
frontendOther/lib/constants/: agora.ts
frontendOther/lib/hooks/: use-ws.ts
frontendOther/lib/services/: media-recorder.ts  ws-client.ts
frontendOther/lib/store/: messages.ts  session.ts  tailwind.ts
frontendOther/lib/types/: messages.ts
frontendOther/lib/utils/: audio.ts  (+1 more)
