[tool.poetry]
name = "agora-backend"
version = "0.1.0"
description = "Agora - Voice-first Socratic tutor backend"
authors = ["Agora Team"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
httpx = "^0.26.0"
aiofiles = "^23.2.1"
python-socketio = "^5.11.0"
langgraph = "^0.0.32"
langchain = "^0.1.6"
langchain-google-genai = "^0.0.6"
google-generativeai = "^0.3.2"
qdrant-client = "^1.7.3"
deepgram-sdk = "^3.2.0"
elevenlabs = "^0.2.27"
openai-whisper = "^20231117"
faster-whisper = "^0.10.0"
docling = "^2.0.1"
docling-core = "^1.0.0"
python-json-logger = "^2.0.7"
websockets = "^12.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.12.1"
ruff = "^0.1.9"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
